--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -125,7 +125,7 @@
             <h1>My Missions</h1>
           </div>
           <div class="bookings">
-            <% @missions.each do |mission, chatroom| %>
+            <% @missions.each do |mission| %>
               <div class="booking-list">
                 <div class="booking">
                   <div class="booking-info">
@@ -134,11 +134,13 @@
                     <div class="booking-time"><%= mission.start_date %> - <%= mission.duration.strftime('%H:%M') %>
                     </div>
                     <div class="booking-location"><%= mission.location %>
-                            <%# <%= mission.chatroom %> 
+                            <%# <%= mission.chatroom %>
                     </div>
                   </div>
-                  <div class="booking-status">Created
-                    <%= link_to "Chat", mission_chatroom_path(@chatroom.mission, @chatroom)
+                  <div class="booking-status">
+                    <% if mission.chatroom %>
+                      <%= link_to "Chat", mission_chatroom_path(mission, mission.chatroom) %>
+                    <% end %>
 
                   </div>
                 </div>
@@ -146,56 +148,39 @@
             <% end %>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
             <%# <%= link_to "Dashboard", profil_path, data: {turbo_method: :get}, class: "btn" %>
-
+          </div>
 
       </div>
 
       <br>
-
+    </div>
   </div>
 
-    <div class="footer">
-      <%= link_to root_path do %>
-        <i class="fas fa-home"></i>
-      <% end %>
+  <div class="footer">
+    <%= link_to root_path do %>
+      <i class="fas fa-home"></i>
+    <% end %>
 
-      <%= link_to calendars_path do %>
-        <i class="fa-solid fa-calendar"></i>
-      <% end %>
-
-
-
-      <%= link_to profile_path  do %>
-        <i class="fa-solid fa-wallet"></i>
-      <% end %>
+    <%= link_to calendars_path do %>
+      <i class="fa-solid fa-calendar"></i>
+    <% end %>
 
 
-      <%= link_to missions_path do %>
-        <i class="fa-solid fa-comments"></i>
-      <% end %>
 
-<% if mission.if != []%>
-  <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
-    <i class="fa-regular fa-message logochat-color"></i>
-  <% end %>
-<% end %>
+    <%= link_to profile_path  do %>
+      <i class="fa-solid fa-wallet"></i>
+    <% end %>
 
-      <%= link_to profile_path do %>
-        <i class="fas fa-user"></i>
-      <% end %>
-    </div>
+
+    <%= link_to missions_path do %>
+      <i class="fa-solid fa-comments"></i>
+    <% end %>
+
+
+    <%= link_to profile_path do %>
+      <i class="fas fa-user"></i>
+    <% end %>
+  </div>
 
 <% end %>
