suite du chatroom

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -133,12 +133,12 @@
                     </div>
                     <div class="booking-time"><%= mission.start_date %> - <%= mission.duration.strftime('%H:%M') %>
                     </div>
-                    <div class="booking-location"><%= mission.location %>
-                            <%# <%= mission.chatroom %> 
+                    <div class="booking-location"> <%= mission.location %>
+                            <%# <%= mission.chatroom %>
                     </div>
                   </div>
-                  <div class="booking-status">Created
-                    <%= link_to "Chat", mission_chatroom_path(@chatroom.mission, @chatroom)
+                  <div class="booking-status"> Created
+                    <%# <%= link_to "Chat", mission_chatroom_path(@chatroom.mission, @chatroom) %>
 
                   </div>
                 </div>
@@ -187,11 +187,11 @@
         <i class="fa-solid fa-comments"></i>
       <% end %>
 
-<% if mission.if != []%>
-  <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
-    <i class="fa-regular fa-message logochat-color"></i>
+<%# <% if mission.id != []%>
+  <%# <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
+    <%# <i class="fa-regular fa-message "></i>
   <% end %>
-<% end %>
+<%# <% end %>
 
       <%= link_to profile_path do %>
         <i class="fas fa-user"></i>
