--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -37,4 +37,11 @@ table {
   td {
     width: 100px;
   }
+  
+}
+
+.calendar-title h1 {
+  font-weight: bolder;
+  font-family: serif;
+  font-size: 30px;
 }
