--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -10,8 +10,12 @@
 
                 <div class="profile-info">
 
-                  <img class="profile-pic" src="https://images.unsplash.com/photo-1483884105135-c06ea81a7a80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80">
-                  <%# <img class="profile-pic" <%= image_tag current_user.photo.key %>
+                  <%# <img class="profile-pic" src="https://images.unsplash.com/photo-1483884105135-c06ea81a7a80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"> %>
+                  <% if current_user.photo.attached? %>
+                  <img class="profile-pic" <%= cl_image_tag current_user.photo.key%>>
+                  <% else %>
+                  <img src="https://res.cloudinary.com/dzwtudz1z/image/upload/v1678893370/favicon_ayxzgj.png" alt="">
+                  <% end %>
                   <br>
                   <h2 class="hvr-underline-from-center"><%= current_user.first_name.capitalize%> <%= current_user.last_name.capitalize%></h2>
                   <div>"I signed up because I had a strong interest in ecology and wanted to make a difference.
