--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,11 +1,17 @@
-  <div class="d-flex align-items-center justify-content-between">
-    <div class="calendar-heading my-2">
+<div class="container">
+  <div class=" align-items-center justify-content-between">
+    <div class="calendar-heading my-3">
       <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view, class: 'btn btn-outline-primary' %>
       <span class="calendar-title btn btn-primary"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
       <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view, class: 'btn btn-outline-primary' %>
     </div>
+  </div>
+
+  <div class="calendar-heading my-2">
     <%= link_to 'Create mission', new_mission_path, class: 'btn btn-outline-warning' %>
   </div>
+</div>
+
 <div class="simple-calendar">
 
   <table class="table table-striped">
