--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -21,8 +21,11 @@
   margin: 4px 13px;
   padding: 20px;
   background-color: #fff;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  overflow: hidden;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
+  border: 1px solid rgb(134, 174, 134);
+  background-color: #fffaf0;
 }
 
 .header-profile {
@@ -33,7 +36,7 @@
 .header-profile h1 {
   font-weight: bold;
   font-family: serif;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .bookings {
@@ -44,11 +47,6 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   overflow: hidden;
-}
-
-.img-booking {
-  border-radius: 5px;
-  width: 100%;
 }
 
 .booking {
@@ -70,18 +68,18 @@
 }
 
 .booking-time {
-  font-size: 20px;
+  font-size: 12px;
   font-weight: bold;
   color: #333;
 }
 
 .booking-location {
-  font-size: 16px;
+  font-size: 10px;
   color: #666;
 }
 
 .booking-status {
-  font-size: 16px;
+  font-size: 10px;
   color: green;
   text-transform: uppercase;
   font-weight: bold;
@@ -89,6 +87,12 @@
 
 .card-profile-wallet {
   border-radius: 20px;
+  overflow: hidden;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
+  border: 1px solid rgb(134, 174, 134);
+  background-color: #fffff0;
+  ;
+
 }
 
 .voucher-link {
@@ -96,9 +100,13 @@
   font-weight: bold;
 }
 
+.voucher-info {
+  font-size: 12px;
+}
+
 .wallet-title {
   text-align: center;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: bold;
   font-family: serif;
 }
