--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -125,7 +125,7 @@
 
 
 
-    <div class="container premier-paraf">
+    <div class="container premier-paraf" id="bottom">
       <div class="container-booking">
           <div class="header-profile">
             <h1>My mission as a Creator</h1>
@@ -163,7 +163,7 @@
     </div>
   </div>
 
-  <div class="footer" id="bottom">
+  <div class="footer">
     <%= link_to root_path do %>
       <i class="fas fa-home"></i>
     <% end %>
