--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -138,7 +138,7 @@
   align-items: center; /* Center the carousel items vertically */
   animation: carousel 3s linear infinite;
   gap: 4px;
-  animation-fill-mode: alternate;
+  animation-direction: alternate;
 }
 
 .logo-item img {
