--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -125,7 +125,7 @@
 
 
 
-    <div class="container premier-paraf" id="bottom">
+    <div class="container premier-paraf">
       <div class="container-booking">
           <div class="header-profile">
             <h1>My mission as a Creator</h1>
@@ -162,6 +162,18 @@
       <br>
     </div>
   </div>
+
+  <div class="green-line">
+  <br>
+  </div>
+
+   <div class="container premier-paraf" id="bottom">
+      <div class="container-booking mt-4">
+      <img src="https://res.cloudinary.com/dzwtudz1z/image/upload/v1678960671/MY_IMPACT-2_d7nhpt.png" alt="">
+      </div>
+      <br>
+  </div>
+
 
   <div class="footer">
     <%= link_to root_path do %>
