--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="calendar-heading my-2">
-    <%= link_to 'Create mission', new_mission_path, class: 'btn btn-outline-warning' %>
+    <%= link_to 'Create mission', new_mission_path, class: 'btn btn-outline-danger' %>
   </div>
 </div>
 
