--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -24,8 +24,8 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
-  border: 1px solid rgb(134, 174, 134);
-  background-color: #fffaf0;
+  border: 1px solid #EADDCA;
+  background-color: #FAF0E6;
 }
 
 .header-profile {
@@ -36,11 +36,12 @@
 .header-profile h1 {
   font-weight: bold;
   font-family: serif;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .bookings {
   margin-bottom: 20px;
+  background-color: #FAF0E6;
 }
 
 .booking-list {
@@ -57,8 +58,8 @@
   border-bottom: 1px solid #ccc;
   width: 100%;
     // overflow: scroll;
-  border: 1px solid #90BE6D;
-}
+  border: 1px solid  #EADDCA;
+  }
 
 .booking-info {
   display: flex;
@@ -89,11 +90,12 @@
   border-radius: 20px;
   overflow: hidden;
   box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
-  border: 1px solid rgb(134, 174, 134);
-  background-color: #fffff0;
+  border: 1px solid #EADDCA;
+  background-color: #FAF0E6;
   ;
 
 }
+
 
 .voucher-link {
   color:#333;
@@ -103,10 +105,12 @@
 .voucher-info {
   font-size: 12px;
 }
+.card-body {
 
+}
 .wallet-title {
   text-align: center;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: bold;
   font-family: serif;
 }
