style chatroom et logo

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,8 +14,10 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
-  border-radius: 50%;
+  width: 70px;
+  height: 40px;
+  
+  // border-radius: 50%;
 }
 
 .navbar-custom {
