--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "components/index";
 @import "components/scroll";
 @import "components/header";
+@import "components/chatroom";
 
 
 .radius{
