search bar modif + calendar

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -334,3 +334,9 @@ body {
   .index-bg {
     background-color: $my-blue;
   }
+
+  .search-bar {
+    margin: 4px;
+    padding: 4px;
+    margin-right: 8px;
+  }
