--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -4,10 +4,10 @@
   </div>
 
   <div class="container-fluid">
-     <form class="d-flex">
+     <form class="d-flex align-items-center margin">
       <form action="/search" method="GET">
-        <input type="text" name="query" placeholder="Search or missions...">
-          <button class="btn btn-outline-success" type= "submit"> GO </button>
+        <input class="search-bar" type="text" name="query" placeholder="Search or missions...">
+          <button class="btn btn-outline-success mt-0" type= "submit"> GO </button>
        </form>
      </form>
   </div>
