--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,7 +1,7 @@
 
 <br>
 <br>
-<div class="container calendar-title"><h1>My Calendar</h1></div>
+<div class="container calendar-title text-center"><h1> <%= current_user.first_name %>'s Calendar</h1></div>
 
 
 <div class="calendar-container">
