--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -5,7 +5,7 @@
 
   <h2><%= @mission.title  %></h2>
 
- <strong class = "current-user"> <h3> Welcome it's <%= current_user.first_name %> 😄</h3></strong>
+ <h3> Welcome it's<strong class = "current-user">  <%= current_user.first_name %> 😄</strong></h3>
 
   <h4> let's chat !</h4>
   <div class="messages" data-chatroom-subscription-target="messages">
