seeds adress + footer

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
   <div class="container-fluid">
 
 
-    <%= link_to missions_path, class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "https://res.cloudinary.com/dzwtudz1z/image/upload/v1678975034/8swozqxfmz-emcvnrl6tm-removebg-preview_az3mnw.png", class:"btn-outline-info" %>
     <% end %>
 
