--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -3,9 +3,9 @@
   data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
 >
 
-  <h2><%= @mission.title  %></h2>
+  <h2 class="text-center mt-2 mb-2"><strong><%= @mission.title  %></strong></h2>
 
- <h3> Welcome it's<strong class = "current-user">  <%= current_user.first_name %> 😄</strong></h3>
+ <h3> Welcome<strong class = "current-user">  <%= current_user.first_name %> 😄</strong></h3>
 
   <h4> let's chat !</h4>
   <div class="messages" data-chatroom-subscription-target="messages">
