--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= favicon_link_tag "favicon.png", rel: "icon", type: "image/png" %>
+    <%= favicon_link_tag "earth-care-favicon.png", rel: "icon", type: "image/png" %>
     <title>EarthCareProject</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
