--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,18 +2,16 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon mb- navbar-custom">
   <div class="container-fluid">
     <%= link_to missions_path, class: "navbar-brand" do %>
-      <%= image_tag "https://res.cloudinary.com/dzwtudz1z/image/upload/v1678975034/8swozqxfmz-emcvnrl6tm-removebg-preview_az3mnw.png", class:"btn-outline-info" %>
+      <%= image_tag "https://res.cloudinary.com/dz19chcgd/image/upload/v1681604916/Green_Colorful_Illustrated_Small_Act_to_Save_Earth_Poster_3_w7cotu.png"  %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto text-end">
         <% if user_signed_in? %>
-
           <li class="nav-item dropdown text-end ">
            <%= image_tag "https://res.cloudinary.com/dcjjlgguj/image/upload/v1678795627/122739028_mcyvpe.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end " aria-labelledby="navbarDropdown">
@@ -21,9 +19,6 @@
              <%= link_to "Your profile", profile_path, class: "dropdown-item" %>
               <%= link_to "Post a mission", new_mission_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {method: :delete}, class: "dropdown-item" %>
-
-
-
             </div>
           </li>
         <% else %>
