--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,11 +7,12 @@
   height: 60px;
   bottom: 0;
   padding: 0 20px;
-  border-top: solid rgb(16, 35, 245);
+  border-top: solid rgb(123, 183, 209);
   width: 100%;
   margin-bottom: 0;
   position: sticky;
   z-index: 100;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .btn-flat:hover {
@@ -26,7 +27,7 @@
 
 .footer i {
   font-size: 24px;
-  color: #7f9df5;
+  color: #B0D3D7;
 }
 
 .calendar {
