--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 @import "components/navbar";
 
 .premier-para {
-  background-color: #d2edff;
+  background-color: #B9CDDA;
   padding-top: 0.1px;
 }
 
@@ -48,20 +48,20 @@
 .second-para {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #d2edff;
+  background-color: #ffffff;
 }
 
 .title-h2-home {
   margin-bottom: 0px;
   font-size: 45px;
   line-height: 45px;
-  font-weight: 800;
+  font-weight: 500;
   letter-spacing: 0.5px;
   font-family: serif;
 }
 
 .text-join-us{
-  font-size: 30px;
+  font-size: 20px;
   font-family: serif;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .fourth-para {
-  background-color: #FFD4B2
+  background-color: #98be9c;
 }
 
 .title-fourth {
@@ -135,7 +135,7 @@
 .carousel-container-logo {
   display: flex;
   width: max-content;
-  align-items: center; /* Center the carousel items vertically */
+  align-items: center; 
   animation: carousel 3s linear infinite;
   gap: 4px;
   animation-direction: alternate;
