caroussel logo et couleur home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,15 +49,16 @@
   <br>
   <p class="text-join-us">+1000 Volunteers</p>
   <br>
-  <div class="horizontal-separator"></div>
+  <%# <div class="horizontal-separator"></div> %>
   <br>
   <p class="text-join-us">+500 Missions</p>
   <br>
-  <div class="horizontal-separator"></div>
+  <%# <div class="horizontal-separator"></div> %>
   <br>
   <p class="text-join-us">+100 Partners</p>
-    <div class="logo-carousel">
-<div class="carousel-container-logo slide-track">
+  
+<div class="logo-carousel">
+  <div class="carousel-container-logo slide-track">
         <div class="logo-item"><%= image_tag('AMOr-benamor.png', class: "w-100") %></div>
         <div class="logo-item"><%= image_tag('Lidl-Logo.png', class: "h-100") %></div>
         <div class="logo-item"><%= image_tag('Fnac_Logo.png', class: "w-100") %></div>
@@ -131,7 +132,7 @@
   <br>
   <div class="horizontal-separator"></div>
   <br>
-  <p class="text-center">CONTACT: support@earth-care-project.com</p>
-  <p class="text-center">21 rue Haxo, 13001 Marseille</p>
+  <strong><p class="text-center">CONTACT: support@earth-care-project.com</p> </strong>
+  <strong><p class="text-center">21 rue Haxo, 13001 Marseille</p> </strong>
   <br>
 </div>
