--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,9 +22,9 @@
   border-style: solid;
   border-width: 3px;
   border-radius: 8px;
-  background-image: linear-gradient(300deg, #4dc390, #4381C1);
+  background-image: linear-gradient(300deg, #4AB989, #4381C1);
   transition-duration: 200ms;
-  color: #d2edff;
+  color: #ffffff;
   font-size: 16px;
   line-height: 20px;
   font-weight: 500;
@@ -37,7 +37,7 @@
   border-style: solid;
   border-width: 3px;
   border-radius: 8px;
-  color: #409e75;
+  color: #4AB989;
   font-size: 16px;
   line-height: 20px;
   font-weight: 500;
@@ -73,7 +73,7 @@
 }
 
 .third-para {
-  background-color: #FFF8D6;
+  background-color:#FEF1ED;
 
 }
 
@@ -95,7 +95,7 @@
 }
 
 .fourth-para {
-  background-color: #98be9c;
+  background-color:#E9FAE3;
 }
 
 .title-fourth {
@@ -121,7 +121,6 @@
 .flex-container .item:last-child {
   margin-right: auto;
 }
-
 .logo-carousel {
   width: 100%;
   overflow: hidden;
@@ -129,23 +128,20 @@
   height: 60px;
   display: flex;
   justify-content: center;
-
 }
 
 .carousel-container-logo {
   display: flex;
   width: max-content;
-  align-items: center; 
-  animation: carousel 3s linear infinite;
-  gap: 4px;
-  animation-direction: alternate;
+  align-items: center;
+  gap: 8px;
+  animation: carousel 7s linear infinite;
 }
 
 .logo-item img {
   width: 300px;
   height: auto;
 }
-
 
 @keyframes carousel {
   0% {
@@ -154,8 +150,7 @@
   100% {
     transform: translateX(-100%);
   }
-}
-
-.slide-track {
-		animation: scroll 70 linear infinite;
+  50.01% {
+    transform: translateX(0);
+  }
 }
