premier para home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 @import "components/navbar";
 
 .premier-para {
-  background-color: #B9CDDA;
+  background-color: #B8DFE6;
   padding-top: 0.1px;
 }
 
