--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,12 +1,46 @@
 // https:gist.githubusercontent.com/dmilon/3db26308391f84b786ae6886a68897ae/raw/5aa85b85f6436794106962c1f3c088b99743f8d8/_chatroom.scss
+  /* Style pour le nom d'utilisateur 1 */
+  .messages {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
 
+  .message {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
-.nickname{
-  color: rgb(197, 32, 51);
-}
+  .current-user .message {
+    align-items: flex-end;
+  }
 
-.current-user {
+  .bubble {
+    display: inline-block;
+    padding: 10px;
+    border-radius: 20px;
+    max-width: 50%;
+  }
 
-  color: royalblue;
-}
+  .current-user{
+    color: #007bff ;
+    font-weight: bold ;
+  }
 
+  .other-user{
+    color: #57cf9f;
+    font-weight: bold ;
+  }
+  .current-user .bubble {
+    background-color: #007bff;
+    color: white;
+    align-self: flex-end;
+  }
+
+  .other-user .bubble {
+    background-color: #57cf9f;
+    color: black;
+    align-self: flex-start;
+  }
