--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,13 +1,11 @@
-<div class="container chatroom"
+ <div class="container chatroom"
   data-controller="chatroom-subscription"
   data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
 >
 
 
   <h2 class="text-center mt-2 mb-2"><strong><%= @mission.title  %></strong></h2>
-
-
- <h3> Welcome<strong class = "current-user">  <%= current_user.first_name %> 😄</strong></h3>
+  <h3> Welcome<strong class = "current-user">  <%= current_user.first_name %> 😄</strong></h3>
 
   <h4> let's chat !</h4>
   <div class="messages" data-chatroom-subscription-target="messages">
@@ -16,7 +14,7 @@
     <% end %>
   </div>
 
-  <div>
+  <div class="send">
     <%= simple_form_for [@mission, @chatroom, @message],
       html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
       <%= f.input :content,
@@ -26,4 +24,5 @@
       <%= f.submit "Send", class: "btn btn-info mb-3 mt-0" %>
     <% end %>
   </div>
+
 </div>
