--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,29 +1,20 @@
 <div class="container chatroom"
   data-controller="chatroom-subscription"
-  data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
->
+  data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
 
   <h2 class="text-center mt-2 mb-2"><strong><%= @mission.title  %></strong></h2>
-<<<<<<< HEAD
+
   <h3>Welcome, <strong class="current-user"><%= current_user.first_name %> 😄</strong></h3>
 
   <h4>Let's chat!</h4>
-=======
-  <h3> Welcome<strong class = "current-user">  <%= current_user.first_name %> 😄</strong></h3>
 
-  <h4> let's chat !</h4>
->>>>>>> 145584f6509d88cf6cbc1d12f2dbb6ec992e21fd
   <div class="messages" data-chatroom-subscription-target="messages">
     <% @chatroom.messages.each do |message| %>
       <%= render "messages/message", message: message %>
     <% end %>
   </div>
 
-<<<<<<< HEAD
-  <div class= "send">
-=======
   <div class="send">
->>>>>>> 145584f6509d88cf6cbc1d12f2dbb6ec992e21fd
     <%= simple_form_for [@mission, @chatroom, @message],
         html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" }  do |f| %>
         <%= f.input :content,
@@ -33,5 +24,4 @@
         <%= f.submit "Send", class: "btn btn-info mb-3 mt-0" %>
     <% end %>
   </div>
-
 </div>
